--- a/index.njk
+++ b/index.njk
@@ -2,6 +2,11 @@
 layout: layouts/base.njk
 ---
 
-<div class="container">
+<div class="container w-full h-full">
     <button onclick="halfmoon.toggleDarkMode()">darkmode</button>
+    {% include "layerStack/layerStack.njk" %}
+</div>
+<div class="w-full h-full bg-very-dark">
+    
+    
 </div>
