--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -24,6 +24,7 @@
     </div>
     
     <script src="js/halfmoon.js"></script>
+    <script src="js/particle.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
