update particle behaviour

--- a/_includes/layerStack/layerStack.njk
+++ b/_includes/layerStack/layerStack.njk
@@ -37,4 +37,7 @@
     <div class="layer" id="blk-grs">
         {# black grass layer #}
     </div>
+    <div class="layer" id="p4">
+        {# overlay Snow Particles #}
+    </div>
 </div>
